Tries to move Assets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,8 +57,8 @@
     <!-- Raleway Google font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700">
     <!-- Favicons -->
-    <link rel="shortcut icon" href="img/favico/marqa.ico">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/favico/apple-icon-60x60.png">
+    <link rel="shortcut icon" href="images/favico/marqa.ico">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favico/apple-icon-60x60.png">
     <!-- Ionicon fonts css file -->
     <%= stylesheet_link_tag 'ionicons.min.css' %>
     <!-- magnific popup css file -->
@@ -157,7 +157,7 @@
             <div class="row">
                 <!-- Profile Pic -->
                 <div class="my-pic center col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
-                    <img src="img/my-face.png" alt="my profile">
+                    <img src="images/my-face.png" alt="my profile">
                 </div>
                 <div class="introduction col-sm-8 col-xs-12 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
                     <h2 class="h2"><%= @user.name %></h2>
@@ -534,7 +534,7 @@
                 <!-- Project No. 1 -->
                 <div class="mix branding col-md-3 col-sm-6 col-xs-6" data-my-order="1" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/02.jpg" class="center-block img-responsive" alt="project 1">
+                        <img src="images/large/02.jpg" class="center-block img-responsive" alt="project 1">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-1" class="open-popup-link">
@@ -545,7 +545,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( branding )</p>
-                                <img src="img/large/02.jpg" class="center-block img-responsive" alt="project 1">
+                                <img src="images/large/02.jpg" class="center-block img-responsive" alt="project 1">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. <br>Proactively maximize transparent e-commerce before fully tested niche markets. Efficiently innovate stand-alone markets with open-source interfaces.
                                     Compellingly simplify multifunctional intellectual capital and backward-compatible "outside the box".</p>
 
@@ -556,7 +556,7 @@
                 <!-- Project No. 2 -->
                 <div class="mix photos col-md-3 col-sm-6 col-xs-6" data-my-order="2" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/01.jpg" class="center-block img-responsive" alt="project 2">
+                        <img src="images/large/01.jpg" class="center-block img-responsive" alt="project 2">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-2" class="open-popup-link">
@@ -567,7 +567,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( photos )</p>
-                                <img src="img/large/01.jpg" class="center-block img-responsive" alt="project 2">
+                                <img src="images/large/01.jpg" class="center-block img-responsive" alt="project 2">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will
                                     be sorely disappointed.</p>
                             </div>
@@ -577,7 +577,7 @@
                 <!-- Project No. 3 -->
                 <div class="mix illustration col-md-3 col-sm-6 col-xs-6" data-my-order="3" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/03.jpg" class="center-block img-responsive" alt="project 3">
+                        <img src="images/large/03.jpg" class="center-block img-responsive" alt="project 3">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-3" class="open-popup-link">
@@ -588,7 +588,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( illustration )</p>
-                                <img src="img/large/03.jpg" class="center-block img-responsive" alt="project 3">
+                                <img src="images/large/03.jpg" class="center-block img-responsive" alt="project 3">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will
                                     be sorely disappointed.</p>
                             </div>
@@ -598,7 +598,7 @@
                 <!-- Project No. 4 -->
                 <div class="mix photos col-md-3 col-sm-6 col-xs-6" data-my-order="4" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/04.jpg" class="center-block img-responsive" alt="project 4">
+                        <img src="images/large/04.jpg" class="center-block img-responsive" alt="project 4">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-4" class="open-popup-link">
@@ -609,7 +609,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( photos )</p>
-                                <img src="img/large/04.jpg" class="center-block img-responsive" alt="project 4">
+                                <img src="images/large/04.jpg" class="center-block img-responsive" alt="project 4">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will
                                     be sorely disappointed.</p>
                             </div>
@@ -619,7 +619,7 @@
                 <!-- Project No. 5 -->
                 <div class="mix branding col-md-3 col-sm-6 col-xs-6" data-my-order="5" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/05.jpg" class="center-block img-responsive" alt="project 5">
+                        <img src="images/large/05.jpg" class="center-block img-responsive" alt="project 5">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-5" class="open-popup-link">
@@ -630,7 +630,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( branding )</p>
-                                <img src="img/large/05.jpg" class="center-block img-responsive" alt="project 5">
+                                <img src="images/large/05.jpg" class="center-block img-responsive" alt="project 5">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will
                                     be sorely disappointed.</p>
                             </div>
@@ -640,7 +640,7 @@
                 <!-- Project No. 6 -->
                 <div class="mix illustration col-md-3 col-sm-6 col-xs-6" data-my-order="6" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/06.jpg" class="center-block img-responsive" alt="project 6">
+                        <img src="images/large/06.jpg" class="center-block img-responsive" alt="project 6">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-6" class="open-popup-link">
@@ -651,7 +651,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( illustration )</p>
-                                <img src="img/large/06.jpg" class="center-block img-responsive" alt="project 6">
+                                <img src="images/large/06.jpg" class="center-block img-responsive" alt="project 6">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here .</p>
                             </div>
                         </div>
@@ -660,7 +660,7 @@
                 <!-- Project No. 7 -->
                 <div class="mix photos col-md-3 col-sm-6 col-xs-6" data-my-order="7" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/02.jpg" class="center-block img-responsive" alt="project 7">
+                        <img src="images/large/02.jpg" class="center-block img-responsive" alt="project 7">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-7" class="open-popup-link">
@@ -671,7 +671,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( photos )</p>
-                                <img src="img/large/02.jpg" class="center-block img-responsive" alt="project 7">
+                                <img src="images/large/02.jpg" class="center-block img-responsive" alt="project 7">
                                 <p>You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will
                                     be sorely disappointed.</p>
                             </div>
@@ -681,7 +681,7 @@
                 <!-- Project No. 8 -->
                 <div class="mix illustration col-md-3 col-sm-6 col-xs-6" data-my-order="8" style="display: inline-block;" data-bound="">
                     <div class="img-wrapper overlay-slide-right center">
-                        <img src="img/large/01.jpg" class="center-block img-responsive" alt="project 8">
+                        <img src="images/large/01.jpg" class="center-block img-responsive" alt="project 8">
                         <div class="overlay-content">
                             <span>project name</span>
                             <a href="#test-popup-8" class="open-popup-link">
@@ -692,7 +692,7 @@
                                 <h3>project title</h3>
                                 <div class="heading-line"></div>
                                 <p class="cat">( illustration )</p>
-                                <img src="img/large/01.jpg" class="center-block img-responsive" alt="project 8">
+                                <img src="images/large/01.jpg" class="center-block img-responsive" alt="project 8">
                                 <p class="left">You may put any HTML here. This is dummy copy. It is not meant to be read. It has been placed here solely to demonstrate the look and feel of finished, typeset text. Only for show. He who searches for meaning here will
                                     be sorely disappointed.</p>
                             </div>
@@ -1188,55 +1188,55 @@
                 <div class="owl-stage-outer">
                     <div class="owl-stage" style="transform: translate3d(-2300px, 0px, 0px); transition: 0.25s; width: 3910px;">
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/codecanyon-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/codecanyon-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/graphicriver-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/graphicriver-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/photodune-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/photodune-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/themeforest-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/themeforest-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/videohive-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/videohive-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/3docean-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/3docean-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/audiojungle-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/audiojungle-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/codecanyon-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/codecanyon-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/graphicriver-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/graphicriver-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/photodune-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/photodune-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item active" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/themeforest-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/themeforest-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item active" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/videohive-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/videohive-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned active" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/3docean-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/3docean-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned active" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/audiojungle-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/audiojungle-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned active" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/codecanyon-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/codecanyon-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/graphicriver-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/graphicriver-logo.png" alt="partner"></div>
                         </div>
                         <div class="owl-item cloned" style="width: 220px; margin-right: 10px;">
-                            <div class="partner"><img src="img/brands/photodune-logo.png" alt="partner"></div>
+                            <div class="partner"><img src="images/brands/photodune-logo.png" alt="partner"></div>
                         </div>
                     </div>
                 </div>
