--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,6 +32,8 @@
   </p>
   <p><%= link_to 'New Project', new_project_path, class: "btn btn-success" %></p>
 </div>
-
-<%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default" %> |
-<%= link_to 'Back', users_path, class: "btn btn-default" %>
+<br />
+<div>
+  <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-default" %> |
+  <%= link_to 'Back', users_path, class: "btn btn-default" %>
+</div>
