--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,6 +19,6 @@
     <%= f.collection_select :user_id, User.order(:name), :id, :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Update', :class => 'btn btn-success' %>
   </div>
 <% end %>
