--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing project</h1>
 
-<%= render 'form' %>
+<div class="container">
+  <%= render 'form' %>
+</div>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<div>
+  <%= link_to 'Show', @project, class: "btn btn-default"  %> |
+  <%= link_to 'Back', projects_path, class: "btn btn-default"  %>
+</div>
