--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,7 +1,9 @@
 <h1>New project</h1>
-<p>
-    Logged as <%= @user.name if @user %>
-</p>
-<%= render 'form' %>
+<div class="container">
+  <p>
+      Logged as <i><%= @user.name if @user %></i>
+  </p>
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Back', projects_path, class: "btn btn-default" %>
