--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_for(@user) do |f| %>
+
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
       <ul>
       <% @user.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,6 +10,7 @@
     </div>
   <% end %>
 
+<%= form_for(@user) do |f| %>
   <div class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username %>
@@ -32,6 +32,6 @@
     <%= f.text_field :github %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Update", :class => "btn btn-success" %>
   </div>
 <% end %>
