--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing user</h1>
 
-<%= render 'form' %>
+<div class="container">
+  <%= render 'form' %>
+</div>
 
-<%= link_to 'Show', @user, class: 'btn btn-default' %> |
-<%= link_to 'Back', users_path, class: 'btn btn-default' %>
+<div>
+  <%= link_to 'Show', @user, class: 'btn btn-default' %> |
+  <%= link_to 'Back', users_path, class: 'btn btn-default' %>
+</div>
