--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
           <td><%= user.projects.count %></td>
           <td>
             <% if user.github %>
-              <a href="https://github.com/<%= user.github %>">Github</a>
+              <a href="https://github.com/<%= user.github %>">@<%= user.github %></a>
             <% end %>
           </td>
           <td><%= link_to 'Show', user, class: "btn btn-default" %></td>
