--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New user</h1>
 
-<%= render 'form', class: "btn btn-default" %>
+<div class="container">
+  <%= render 'form', class: "btn btn-default" %>
+</div>
 
 <%= link_to 'Back', users_path, class: "btn btn-default" %>
