--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </div>
+  <div class="field">
     <%= f.label :user_id %><br>
     <%= f.collection_select :user_id, User.order(:name), :id, :name %>
   </div>
