--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Project details</h1>
+<hr />
 <div class="container">
   <p>
     <strong>Name:</strong>
     <%= @project.name %>
+  </p>
+  <p>
+    <strong>Description:</strong>
+    <p><%= @project.description %></p>
   </p>
   <% if @project.user %>
     <p>
