--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New user</h1>
-
+<hr />
 <div class="container">
-  <%= render 'form', class: "btn btn-default" %>
+  <%= render 'form' %>
 </div>
 
 <%= link_to 'Back', users_path, class: "btn btn-default" %>
