--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Project details</h1>
 <hr />
-<div class="container">
+<div class="container well">
   <p>
     <strong>Name:</strong>
     <%= @project.name %>
