--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
+    <%= f.label :image_url %><br>
+    <%= f.text_field :image_url %>
+  </div>
+  <div class="field">
     <%= f.label :formation %><br>
     <%= f.text_field :formation %>
   </div>
