--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
     <thead>
       <tr>
         <th>Name</th>
+        <th>Image</th>
         <th>Projects</th>
         <th>Github</th>
         <th colspan="3"></th>
@@ -15,6 +16,7 @@
       <% @users.each do |user| %>
         <tr>
           <td><%= user.name %></td>
+          <td><%= image_tag(user.image_url, alt: "Profile image", class: "img-github") if user.image_url %></td>
           <td><%= user.projects.count %></td>
           <td>
             <% if user.github %>
