--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -218,7 +218,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="fact">
                         <i class="ion-code-working"></i>
-                        <p id="number_1">0</p>
+                        <p id="number_1" class="fact-number">0</p>
                         <span>lines of code</span>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="fact">
                         <i class="ion-fork-repo"></i>
-                        <p id="number_2">0</p>
+                        <p id="number_2" class="fact-number">0</p>
                         <span>projects done</span>
                     </div>
                 </div>
@@ -234,7 +234,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="fact">
                         <i class="ion-coffee"></i>
-                        <p id="number_3">0</p>
+                        <p id="number_3" class="fact-number">0</p>
                         <span>cups of coffee</span>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="fact">
                         <i class="ion-happy"></i>
-                        <p id="number_4">0</p>
+                        <p id="number_4" class="fact-number">0</p>
                         <span>satisfied customers</span>
                     </div>
                 </div>
