--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,14 @@
     <%= f.text_field :username %>
   </div>
   <div class="field">
+    <%= f.label :password %><br />
+    <%= f.password_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation %>
+  </div>
+  <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
