--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,17 +2,17 @@
 <html>
 <head>
   <title>Portfolio</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <!-- <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> -->
   <!-- Bootstrap file -->
   <%= stylesheet_link_tag 'bootstrap.min.css' %>
 
+  <!-- <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> -->
   <!-- Including jQuery file -->
   <%= javascript_include_tag "jquery-1.12.1.min.js" %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+
 <%= yield %>
 
 </body>
