--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -910,7 +910,7 @@
             <div class="row form-wrapper">
                 <div class="col-md-8 col-md-offset-2 wow fadeInUp" data-wow-duration="0.5s" data-wow-offset="200" style="animation-duration: 0.5s; animation-name: none;">
                     <!-- Contact-Me Form -->
-                    <form data-toggle="validator" role="form" id="contact-form" novalidate="true">
+                    <form data-toggle="validator" role="form" id="contact-form" novalidate="true" action="/send_email/" method="post">
                         <div class="form-group has-feedback">
                             <input type="text" name="name" id="name" class="form-control" data-error="Please, Enter Your Name." required="">
                             <label for="name">Your Name</label>
