Updates site content

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Portfolio</title>
-  <!-- <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %> -->
+  <%= stylesheet_link_tag  'home', media: 'all', 'data-turbolinks-track' => true %>
   <!-- Bootstrap file -->
   <%= stylesheet_link_tag 'bootstrap.min.css' %>
 
