--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -10,19 +10,21 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.collection_select :user_id, User.order(:name), :id, :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit 'Update', :class => 'btn btn-success' %>
+  <div class="col-sm-4 col-xs-12 col-offset-sm-1">
+    <div class="field">
+      <%= f.label :name %><br>
+      <%= f.text_field :name, :class => 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :description %><br />
+      <%= f.text_area :description, :class => 'form-control' %>
+    </div>
+    <div class="field">
+      <%= f.label :user_id %><br>
+      <%= f.collection_select :user_id, User.order(:name), :id, :name %>
+    </div>
+    <div class="actions">
+      <%= f.submit 'Update', :class => 'btn btn-success' %>
+    </div>
   </div>
 <% end %>
