Adds resume and favicon

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
     <!-- Raleway Google font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700">
     <!-- Favicons -->
-    <link rel="shortcut icon" href="assets/favico/marqa.ico">
+    <link rel="shortcut icon" href="assets/favico/ruby.ico">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/favico/apple-icon-60x60.png">
     <!-- Ionicon fonts css file -->
     <%= stylesheet_link_tag 'ionicons.min.css' %>
