Adds extra quote section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -480,6 +480,18 @@
     </div>
     <!-- End Portfolio Section -->
 
+      <!-- Start Quote Section -->
+      <div class="quote">
+          <div class="overlay"></div>
+          <div class="container">
+              <div class="qoute-wrapper">
+                  <p class="words"><span class="quote-mark open">"</span>If you believe in victory, then victory will believe in you.<span class="quote-mark end">"</span></p>
+                  <p class="author">- Paulo Coelho -</p>
+              </div>
+          </div>
+      </div>
+      <!-- End Quote Section -->
+
     <!-- Start Testmonials Section -->
     <div class="testmonials center hidden" id="testmonials">
         <div class="overlay"></div>
